Fix: implement configurable CORS origins for production